--- a/src/main/java/com/gacha/silo/DaftarSuratJalan.form
+++ b/src/main/java/com/gacha/silo/DaftarSuratJalan.form
@@ -82,6 +82,7 @@
                 <Column editable="true" title="Action" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="rowHeight" type="int" value="35"/>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
