--- a/src/main/java/com/gacha/silo/DaftarItem.form
+++ b/src/main/java/com/gacha/silo/DaftarItem.form
@@ -61,7 +61,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="ItemsTable">
+        <Component class="javax.swing.JTable" name="DaftarItemTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="8" rowCount="4">
