--- a/src/main/java/com/gacha/silo/DeliveryNotesDescription.form
+++ b/src/main/java/com/gacha/silo/DeliveryNotesDescription.form
@@ -39,7 +39,7 @@
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="PendingButton" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
-                  <Component id="PrintButton" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                  <Component id="EmailButton" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
                   <Component id="SignButton" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
                   <Component id="PreparingButton" min="-2" pref="114" max="-2" attributes="0"/>
               </Group>
@@ -52,31 +52,31 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="InvoiceNumberText" alignment="0" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="InvoiceNumberLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="PendingButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                      <Component id="InvoiceNumberText" alignment="3" max="32767" attributes="0"/>
+                      <Component id="PreparingButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="InvoiceNumberLabel" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="DeliveryNotesNumberLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                       <Component id="DeliveryNotesNumberText" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                      <Component id="SignButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="PendingButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="CustomerNameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="CustomerNameText" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="PrintButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="SignButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="OrderDateLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="OrderDateText" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="PreparingButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="EmailButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -268,12 +268,12 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SignButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="PrintButton">
+    <Component class="javax.swing.JButton" name="EmailButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Print"/>
+        <Property name="text" type="java.lang.String" value="Email"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PrintButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EmailButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="PreparingButton">
